InternexDev_Sandbox/src/objects/Funding_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Draw_Fee__c</fullName>
        <formula>Funding_Request__r.Applied_Draw_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Fee__c</fullName>
        <formula>Funding_Request__r.Applied_Draw_Fee__c + Funding_Request__r.Applied_Origination_Fee__c + IF( Funding_Request__r.Wire_Mode__c == True,Funding_Request__r.Wire_Fee__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Origination_Fee__c</fullName>
        <formula>Funding_Request__r.Applied_Origination_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Partner_Draw_Fee__c</fullName>
        <formula>Funding_Request__r.Actual_Partner_Draw_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Partner Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Partner_Origination_Fee__c</fullName>
        <formula>Funding_Request__r.Actual_Partner_Origination_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Partner Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Acceptance_Date__c</fullName>
        <label>CP Funded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount_Interest_Rate__c</fullName>
        <label>Discount/Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Drawal_Fee_Percentage__c</fullName>
        <formula>Funding_Request__r.Client_Account__r.Drawal_Fee_Percentage__c</formula>
        <label>Draw Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Drawal_Fee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draw Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Funding Allotted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Provider</label>
        <referenceTo>Capital_Provider__c</referenceTo>
        <relationshipLabel>Funding Transactions</relationshipLabel>
        <relationshipName>Funding_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Request__c</fullName>
        <label>Funding Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.Status</field>
                <operation>equals</operation>
                <value>Fully Funded, Funds Transferred</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Funding Transactions</relationshipLabel>
        <relationshipName>Funding_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Transaction_Date__c</fullName>
        <label>Funding Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_provider_Name__c</fullName>
        <defaultValue>&apos;InterNex&apos;</defaultValue>
        <label>Funding provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funds_to_be_Transferred__c</fullName>
        <formula>Funding_Request__r.Funding_Requested__c - Applied_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds to be Transferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Drawal_fee__c</fullName>
        <formula>Funding_Request__r.Client_Account__r.Minimum_Drawal_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Draw fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Origination_Fee__c</fullName>
        <formula>Funding_Request__r.Client_Account__r.Minimum_Origination_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Origination Fee Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Percentage__c</fullName>
        <formula>Funding_Request__r.Client_Account__r.Origination_Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origination Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Origination_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Origination Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Draw</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remittance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Funding Transaction</label>
    <nameField>
        <displayFormat>FT-{00000}</displayFormat>
        <label>Funding Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Funding_Transaction_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c
&lt; Datevalue(Funding_Transaction_Date__c)</errorConditionFormula>
        <errorMessage>Please enter the Valid Date.Transaction Date must be Less than or Equal to Business Transaction Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Alloted_Funding_amount</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISNEW(),Funding_Request__r.Funds_Released__c + Fund__c &gt; Funding_Request__r.Funding_Requested__c), (Funding_Request__r.Funds_Released__c - PRIORVALUE(Fund__c)) + Fund__c &gt; Funding_Request__r.Funding_Requested__c)</errorConditionFormula>
        <errorDisplayField>Fund__c</errorDisplayField>
        <errorMessage>Please enter valid Amount. You can not give more than Requested amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Funding_Transaction_Count</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; Funding_Request__r.Funding_Transaction_Count__c &gt;= 1</errorConditionFormula>
        <errorMessage>Only One Funding Transaction allowed for one Funding Request</errorMessage>
    </validationRules>
</CustomObject>